feat: add server browser env runtime image update
